--- a/public/assets/css/events.css
+++ b/public/assets/css/events.css
@@ -15,7 +15,8 @@ header {
     text-align: center;
     font-size: 95px;
 	font-family: "Dancing Script", sans-serif; 
-	color: #9F1DB2;
+	color: #fff;
+	text-shadow: 2px 2px #000;
     
 }
 
@@ -48,7 +49,8 @@ header {
     text-align: center;
     font-size: 95px;
 	font-family: "Dancing Script", sans-serif; 
-	color: #9F1DB2;
+	color: #fff;
+	text-shadow: 2px 2px #000;
     
 }
 
